Run in parallel, abstract away version
ChatGPT doesn't need to know about versions – we can save version numbers within the plugin app.

This saves time as ChatGPT doesn't need to print out the long version number each time.

We can also parallelise the running of each model. There's no need to do them sequentially.
